# subway-access

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  llms.txt  mkdocs.yml  noxfile.py  pyproject.toml
.claude/: launch.json
.claude/agents/: case-study-reviewer.md  release-auditor.md
.claude/commands/: bump.md  release-check.md  run-case-study.md
.claude/skills/: factor-factory-integration.md  release-bump.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  compat.yml
artifacts/manhattan/: accessibility-gaps.csv  catchments.geojson  station-metrics.csv
cache/bronx/: mta-availability-history.json  mta-equipment-assets.json  outages.json  snapshot-metadata.json
cache/brooklyn/: accessibility.csv  snapshot-metadata.json  stations.csv
cache/manhattan/: entrances.geojson  mta-availability-history.json  mta-station-catalog.json  snapshot-metadata.json  stations.csv  tracts.geojson
dist-release-check/: subway_access-0.1.dev3+gc56a2e8f8.d20260403-py3-none-any.whl
docs/: agent-kickoff-todo.md  api.md  architecture.md  changelog.md  cli.md  contributing.md  data-sources.md  factor-factory-integration.md  getting-started.md  index.md  mvp-roadmap.md  project-brief.md  releasing.md  usage.md
docs/notes/: original-spec.md
docs/og-context/: agent-handoff-prompt.md  agent-kickoff-todo.md  api.md  data-sources.md  index.md  mvp-roadmap.md  project-brief.md  usage.md
docs/og-context/notes/: gap-explination.md  original-spec.md
examples/: README.md
examples/about-the-data/: .gitignore  README.md  analysis_logic.py  download_logic.py  main.py  pyproject.toml
examples/about-the-data/reports/: about-the-data-tearsheet.md
examples/accessibility-change-over-time/: .gitignore  CASESTUDY.md  README.md  main.py  pyproject.toml
examples/accessibility-change-over-time/artifacts/: borough-summary.csv  panel-dataset.csv
examples/accessibility-change-over-time/cache/bronx/: accessibility.csv  entrances.geojson  snapshot-metadata.json  stations.csv  study-area.geojson  tracts.geojson
examples/accessibility-change-over-time/cache/brooklyn/: entrances.geojson  mta-availability-history.json  mta-equipment-assets.json  outages.json  snapshot-metadata.json  study-area.geojson  tracts.geojson
examples/accessibility-change-over-time/cache/manhattan/: accessibility.csv  mta-equipment-assets.json  outages.json  snapshot-metadata.json  study-area.geojson
examples/accessibility-change-over-time/cache/queens/: accessibility.csv  entrances.geojson  mta-availability-history.json  mta-equipment-assets.json  outages.json  snapshot-metadata.json  stations.csv  study-area.geojson  tracts.geojson
examples/accessibility-change-over-time/cache/staten-island/: accessibility.csv  entrances.geojson  snapshot-metadata.json  stations.csv  study-area.geojson  tracts.geojson
examples/accessibility-change-over-time/casestudy/: combine.sh
examples/accessibility-change-over-time/casestudy/sections/: 00-frontmatter.md  01-introduction.md  02-background.md  03-data-and-methods.md  04-results.md  05-discussion.md  06-references.md  07-appendices.md
examples/accessibility-change-over-time/engine-audit/artifacts/: did_results.json  rdd_results.json  scm_results.json  spatial_results.json
examples/accessibility-change-over-time/engine-audit/manuscripts/: FINDINGS.md
examples/accessibility-change-over-time/reports/: accessibility-change-report.md
examples/accessibility-change-over-time/reports/supplementary/: correlation-analysis.md  engine-audit.md  model-specification.md  spatial-diagnostics.md  upgrade-provenance.csv
examples/borough-gap-analysis/: README.md  main.py  pyproject.toml
examples/borough-gap-analysis/reports/: borough-gap-analysis-tearsheet.md
examples/catchment-map/: README.md  main.py  pyproject.toml
examples/catchment-map/reports/: catchment-map-tearsheet.md
examples/example-template/: .gitignore  README.md  main.py  pyproject.toml
examples/example-template/reports/: example-template-tearsheet.md
examples/factor-factory-rdd-walkthrough/: .gitignore  README.md  main.py  pyproject.toml
examples/factor-factory-rdd-walkthrough/artifacts/: rdd_results.json
examples/factor-factory-rdd-walkthrough/manuscripts/: FINDINGS.md
examples/fetch-borough-snapshot/: .gitignore  README.md  main.py  pyproject.toml
examples/fetch-borough-snapshot/reports/: fetch-borough-snapshot-tearsheet.md
examples/multi-borough-access-profile/: README.md  main.py  pyproject.toml
examples/multi-borough-access-profile/reports/: multi-borough-access-profile-tearsheet.md
examples/network-access-comparison/: README.md  main.py  pyproject.toml
examples/network-access-comparison/reports/: network-access-comparison-tearsheet.md
examples/outage-reliability-report/: README.md  main.py  pyproject.toml
examples/outage-reliability-report/reports/: outage-reliability-report-tearsheet.md
examples/quickstart-demo/: README.md  main.py  pyproject.toml
examples/quickstart-demo/reports/: quickstart-demo-tearsheet.md
scripts/: audit_public_api.py  check_research_progress.py  clean.py  compile_research_to_csv.py  real_upgrade_years_template.py  render_tracked_example_figures.py  smoke_installed_package.py
seeds/enhanced/: README.md
seeds/enhanced/upgrade_templates/: _all_boroughs.csv  bronx.csv  brooklyn.csv  manhattan.csv  queens.csv  staten_island.csv
src/subway_access/: __init__.py  _fixtures.py  _geo.py  _not_implemented.py  cli.py  exporters.py  loaders.py  models.py  pipeline.py  processors.py
tests/: __init__.py  helpers.py  test_analysis.py  test_cli.py  test_contracts.py  test_entrances_and_gtfs.py  test_export.py  test_factors.py  test_helpers.py  test_helpers_subpackage.py  test_io.py  test_models.py  test_network.py  test_package.py  test_pipeline.py  test_reporting.py  test_samples.py  test_temporal.py
(+377 files in other folders)
