[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "subway-access"
authors = [
  { name = "Blaise Albis-Burdige" },
]
description = "Spatial analysis toolkit for evaluating NYC subway accessibility, reliability, and equity gaps."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = [
  "nyc",
  "subway",
  "accessibility",
  "transit",
  "civic-tech",
  "open-data",
  "geospatial",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/subway_access"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/subway_access",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/Makefile",
  "/CODE_OF_CONDUCT.md",
  "/SECURITY.md",
  "/docs",
  "/scripts",
  "/mkdocs.yml",
  "/.readthedocs.yaml",
]

[project.scripts]
subway-access = "subway_access.cli:main"

[project.urls]
Homepage = "https://github.com/random-walks/subway-access"
"Documentation" = "https://subway-access.readthedocs.io/"
Portfolio = "https://blaiseab.com/"
"Bug Tracker" = "https://github.com/random-walks/subway-access/issues"
Discussions = "https://github.com/random-walks/subway-access/discussions"
Changelog = "https://github.com/random-walks/subway-access/releases"


[dependency-groups]
test = [
  "pytest >=9",
  "pytest-cov >=7",
]
lint = [
  "mypy >=1.19.1",
  "ruff >=0.15.8",
]
dev = [
  { include-group = "lint" },
  { include-group = "test" },
]
docs = [
    "markdown>=3.9",
    "mdx-include>=1.4.2",
    "mkdocs-material>=9.1.19",
    "mkdocs>=1.1.2",
    "mkdocstrings-python>=1.18.2",
    "pyyaml>=6.0.1",
    "ruff>=0.12",
]

[tool.uv]
default-groups = ["dev"]


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/subway_access/_version.py"

[tool.hatch.envs.default]
dependency-groups = ["dev"]

[tool.hatch.envs.hatch-test]
dependency-groups = ["test"]
env-vars.PYTHONWARNDEFAULTENCODING = "1"


[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals"]
strict = true
filterwarnings = [
  "error",
]
log_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["subway_access"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "subway_access.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true


[tool.ruff]
show-fixes = true

[tool.ruff.lint]
extend-select = [
  "ARG",    # flake8-unused-arguments
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "EM",     # flake8-errmsg
  "EXE",    # flake8-executable
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # NumPy specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]
# Uncomment if using a _compat.typing backport
# typing-modules = ["subway_access._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["EXE001", "T20"]
"docs/examples/**" = ["T20"]
"src/subway_access/_version.py" = ["Q000", "RUF022"]
"src/subway_access/__main__.py" = ["I001"]
"src/subway_access/cli.py" = ["T20"]
"src/subway_access/_not_implemented.py" = ["EM"]
"scripts/*.py" = ["EM", "TRY", "F541"]


[tool.pylint]
py-version = "3.10"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]
