[build-system]
requires = ["hatchling>=1.26", "hatch-vcs"]
build-backend = "hatchling.build"


[project]
name = "subway-access"
authors = [
  { name = "Blaise Albis-Burdige" },
]
description = "Spatial analysis toolkit for evaluating NYC subway accessibility, reliability, and equity gaps."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = [
  "nyc",
  "subway",
  "accessibility",
  "transit",
  "civic-tech",
  "open-data",
  "geospatial",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "nyc-geo-toolkit>=0.1.5",
  "shapely>=2.1.2",
]

[project.scripts]
subway-access = "subway_access.cli:main"

[project.urls]
Homepage = "https://github.com/random-walks/subway-access"
"Documentation" = "https://subway-access.readthedocs.io/"
Portfolio = "https://blaiseab.com/"
"Bug Tracker" = "https://github.com/random-walks/subway-access/issues"
Discussions = "https://github.com/random-walks/subway-access/discussions"
Changelog = "https://github.com/random-walks/subway-access/releases"

[project.optional-dependencies]
network = [
  "networkx>=3.4.2",
  "osmnx>=2.0.6",
  "scikit-learn>=1.6",
]
plotting = [
  "contextily>=1.6",
  "geopandas>=1.1",
  "matplotlib>=3.10",
]
panel = [
  "pandas>=2.2",
]
research = [
  "pandas>=2.2",
  "statsmodels>=0.14",
  "scipy>=1.14",
]
spatial-models = [
  "pandas>=2.2",
  "libpysal>=4.10",
  "spreg>=1.6",
]
all = [
  "contextily>=1.6",
  "geopandas>=1.1",
  "matplotlib>=3.10",
  "networkx>=3.4.2",
  "osmnx>=2.0.6",
  "pandas>=2.2",
  "scikit-learn>=1.6",
  "statsmodels>=0.14",
  "scipy>=1.14",
]


[dependency-groups]
test = [
  "networkx>=3.4.2",
  "osmnx>=2.0.6",
  "pytest >=9",
  "pytest-cov >=7",
  "scikit-learn>=1.6",
]
lint = [
  "mypy >=1.19.1",
  "pylint >=3.3",
  "ruff >=0.15.8",
]
dev = [
  { include-group = "lint" },
  { include-group = "test" },
]
docs = [
    "markdown>=3.9",
    "mdx-include>=1.4.2",
    "mkdocs-material>=9.1.19",
    "mkdocs>=1.1.2",
    "mkdocstrings-python>=1.18.2",
    "pyyaml>=6.0.1",
    "ruff>=0.12",
]

[tool.uv]
default-groups = ["dev"]


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/subway_access/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/subway_access"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/subway_access",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/Makefile",
  "/CODE_OF_CONDUCT.md",
  "/SECURITY.md",
  "/docs",
  "/scripts",
  "/mkdocs.yml",
  "/.readthedocs.yaml",
]

[tool.hatch.envs.default]
dependency-groups = ["dev"]

[tool.hatch.envs.hatch-test]
dependency-groups = ["test"]
env-vars.PYTHONWARNDEFAULTENCODING = "1"


[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--showlocals"]
strict = true
filterwarnings = [
  "error",
]
log_level = "INFO"
testpaths = [
  "tests",
]


[tool.coverage]
run.source = ["subway_access"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "subway_access.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "nyc_geo_toolkit"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["shapely", "shapely.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "networkx"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["geopandas", "geopandas.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "contextily"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["libpysal", "libpysal.*", "spreg", "spreg.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["statsmodels", "statsmodels.*", "scipy", "scipy.*"]
ignore_missing_imports = true


[tool.ruff]
show-fixes = true

[tool.ruff.lint]
extend-select = [
  "ARG",    # flake8-unused-arguments
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "EM",     # flake8-errmsg
  "EXE",    # flake8-executable
  "FA",     # flake8-future-annotations
  "FLY",    # flynt
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "ICN",    # flake8-import-conventions
  "ISC",    # flake8-implicit-str-concat
  "LOG",    # flake8-logging
  "NPY",    # NumPy specific rules
  "PD",     # pandas-vet
  "PERF",   # perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-use-pathlib
  "PYI",    # flake8-pyi
  "Q",      # flake8-quotes
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific
  "SIM",    # flake8-simplify
  "SLOT",   # flake8-slots
  "T10",    # flake8-debugger
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]
# Uncomment if using a _compat.typing backport
# typing-modules = ["subway_access._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "TC001", "TC002", "TC003"]
"noxfile.py" = ["EXE001", "T20"]
"examples/**" = ["T20"]
"src/subway_access/_version.py" = ["Q000", "RUF022"]
"src/subway_access/analysis/_core.py" = ["PLC0415"]
"src/subway_access/factors/_base.py" = ["PLC0415"]
"src/subway_access/factors/_compat.py" = ["PLC0415"]
"src/subway_access/temporal/_models.py" = ["PLC0415"]
"src/subway_access/temporal/_spatial_weights.py" = ["PLC0415"]
"src/subway_access/__main__.py" = ["I001"]
"src/subway_access/cli/_main.py" = ["T20"]
"scripts/*.py" = ["EM", "TRY", "F541", "T20", "TC003"]


[tool.pylint]
py-version = "3.10"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "duplicate-code",
  "design",
  "fixme",
  "import-outside-toplevel",
  "line-too-long",
  "too-many-nested-blocks",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
]
