[project]
name = "accessibility-change-over-time"
version = "0.1.0"
description = "Research pipeline: how accessibility changes impact demographic patterns over time."
requires-python = ">=3.10"
dependencies = [
  "subway-access[all]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
