[project]
name = "subway-access-accessibility-change-over-time"
version = "0.0.0"
description = "Research pipeline: how accessibility changes impact demographic patterns over time."
requires-python = ">=3.10"
dependencies = [
  "subway-access[all]",
]

[tool.uv.sources]
subway-access = { path = "../..", editable = true }
